--- a/engine/build.gradle
+++ b/engine/build.gradle
@@ -96,6 +96,7 @@ dependencies {
     compile group: 'ec.util', name: 'MersenneTwister', version: '20'
     compile group: 'org.abego.treelayout', name: 'org.abego.treelayout.core', version: '1.0.1'
     compile group: 'com.miglayout', name: 'miglayout-core', version: '4.2'
+    compile group: 'org.terasology', name: 'TeraMath', version: '0.1.0-SNAPSHOT+6'
 
     // Wildcard dependency to catch any libs provided with the project (remote repo preferred instead)
     compile fileTree(dir: 'libs', include: '*.jar')
